k8s/conduit/emojivoto.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: emojivoto
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: emoji-svc
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji-svc
  template:
    metadata:
      labels:
        app: emoji-svc
    spec:
      containers:
      - name: emoji-svc
        image: registry.cn-hangzhou.aliyuncs.com/hu279318344/emojivoto-emoji-svc:v2
        ports:
        - name: grpc
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: emoji-svc
  namespace: emojivoto
spec:
  selector:
    app: emoji-svc
  clusterIP: None
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: voting-svc
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-svc
  template:
    metadata:
      labels:
        app: voting-svc
    spec:
      containers:
      - name: voting-svc
        image: registry.cn-hangzhou.aliyuncs.com/hu279318344/emojivoto-voting-svc:v2 
        ports:
        - name: grpc
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
  namespace: emojivoto
spec:
  selector:
    app: voting-svc
  clusterIP: None
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc
  template:
    metadata:
      labels:
        app: web-svc
    spec:
      containers:
      - name: web-svc
        image: registry.cn-hangzhou.aliyuncs.com/hu279318344/emojivoto-web:v2
        ports:
        - name: http
          containerPort: 80
      - name: vote-bot
        image: buoyantio/emojivoto-web:v2
        command: ["emojivoto-vote-bot"]
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  type: LoadBalancer
  selector:
    app: web-svc
  ports:
  - name: http
    port: 80
    targetPort: 80
